--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Sass</title>
     <link rel="stylesheet" href="./scss/main.css">    
 </head>
-<body>
+<body class="light">
 
     <div class="main">
+        <p class="main__paragraph">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, maxime labore. Quo odio iusto officia sapiente porro consectetur eum odit nam deleniti placeat ex beatae doloribus totam reprehenderit voluptate, excepturi sunt? Nemo obcaecati voluptatem minima quia doloribus rem! Asperiores optio, explicabo quis veniam vero quaerat? Assumenda ullam facilis consectetur ad!
+        </p>
         <p class="main__paragraph">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, maxime labore. Quo odio iusto officia sapiente porro consectetur eum odit nam deleniti placeat ex beatae doloribus totam reprehenderit voluptate, excepturi sunt? Nemo obcaecati voluptatem minima quia doloribus rem! Asperiores optio, explicabo quis veniam vero quaerat? Assumenda ullam facilis consectetur ad!
         </p>
